# django-rich-text-editor

./: README.rst  manage.py  requirements.txt
django_rich_text_editor/: MANIFEST.in  README.rst  setup.cfg
django_rich_text_editor/rich_text_editor/: configs.py  widgets.py
django_rich_text_editor/rich_text_editor/static/css/: editor.css
django_rich_text_editor/rich_text_editor/static/js/: editor.js
django_rich_text_editor/rich_text_editor/templates/rich_text_editor/: widget.html
rich_text_demo/: asgi.py  settings.py  urls.py  wsgi.py
rich_text_demo/demo_application/: admin.py  apps.py  models.py
rich_text_demo/demo_application/migrations/: 0001_initial.py
rich_text_editor/: apps.py  configs.py  fields.py
rich_text_editor/templates/rich_text_editor/: widget.html
