[metadata]
name = django-rich-text-editor
version = 0.0.3
author = Julian Singheiser
author_email = julian.singheiser.official@gmail.com
maintainer = Julian
maintainer_email = julian.singheiser.official@gmail.com
description = Django admin Rich Text Editor integration.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://jssmartcode.de/
license = MIT
keywords = django RichTextEditor
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules    

[options]
include_package_data = true
packages = find: